# PersistentFavorites

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
include/: Events.h  Hooks.h  Logger.h  Manager.h  PCH.h  Serialization.h  Settings.h  Utils.h
src/: Events.cpp  Hooks.cpp  Manager.cpp  Serialization.cpp  Utils.cpp  plugin.cpp
